# SPAD-correct

./: CMakeLists.txt  README.md  SPAD-bin_width_factors.cpp  SPAD-binning.cpp  SPAD-calibrate.cpp  SPAD-correct.cpp  SPAD-correct.h  SPAD-correct_IO.cpp  SPAD-correct_internal.h  SPAD-correct_metadata.cpp  SPAD-corrections.cpp  SPAD-timebase_scales.cpp  SPAD-timebase_shifts.cpp
